pro/src/components/IndividualOfferLayout/IndividualOfferLayout.module.scss
@use "styles/mixins/_rem.scss" as rem;
@use "styles/mixins/_fonts.scss" as fonts;
@use "styles/mixins/_size.scss" as size;

.header-container {
  display: flex;
  flex-direction: column;
  gap: var(--size-spacing-m);

  @media screen and (min-width: size.$laptop) {
    flex-direction: row;
    justify-content: space-between;
    align-items: flex-start;
    gap: var(--size-spacing-xl);
  }
}

.main-heading {
  margin-bottom: var(--size-spacing-m);

  @media screen and (min-width: size.$laptop) {
    margin-bottom: 0;
  }
}

.content {
  margin-top: rem.torem(15px);
}

.offer-title {
  @include fonts.title4;

  display: flex;
  flex-direction: column;
  gap: var(--size-spacing-s);
  margin-top: rem.torem(-32px);
  margin-bottom: rem.torem(64px);

  @media screen and (min-width: size.$tablet) {
    flex-direction: row;
    gap: var(--size-spacing-l);
    margin-bottom: 0;
  }
}

.status-container {
  position: relative;

  @media screen and (min-width: size.$tablet) {
    flex-shrink: 0;
  }
}

.status {
  align-self: baseline;
  margin-bottom: var(--size-spacing-l);
}

.banner-container {
  margin: var(--size-spacing-l) 0;

  &-title {
    @include fonts.title3;

    margin-bottom: var(--size-spacing-l);
  }
}

.cards-container {
  display: flex;
  flex-wrap: wrap;
  gap: var(--size-spacing-l);
}

.ean-already-exists-callout {
  margin: var(--size-spacing-l) 0;
}

.ean-already-exists-callout-description {
  margin: var(--size-spacing-s) 0;
}

